demo/k8s/dolibarr/dolibar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-dolibarr
  labels:
    app: demo-dolibarr
spec:
  replicas: 5
  selector:
    matchLabels:
      app: demo-dolibarr
  template:
    metadata:
      labels:
        app: demo-dolibarr
    spec:
      containers:
      - name: dolibarr
        image: tuxgasy/dolibarr #gcr.io/leafy-momentum-239412/demo/dolibarr:9.0.0-2
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      - name: mariadb
        image: mariadb:10
        imagePullPolicy: "IfNotPresent"
