demo/k8s/dolibarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-dolibarr
  name: demo-dolibarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: demo-dolibarr
  type: ClusterIP
