demo/k8s/dolibarr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-dolibarr-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dolibarr.demo.erpgo.az
    http:
      paths:
      - backend:
          serviceName: demo-dolibarr
          servicePort: http
        path: /
  tls:
  - hosts:
    - dolibarr.demo.erpgo.az
    secretName: dolibarr-demo-erpgo-tls
